fixed ordering of transactions
